--- a/landing-page/styles/src/components/_features.scss
+++ b/landing-page/styles/src/components/_features.scss
@@ -3,7 +3,7 @@
 .features {
   position: relative;
   clip-path: polygon(
-    0 $cut-out,
+    0 $features__cut-out,
     100% 0,
     100% ($features__height - $features__cut-out),
     0 $features__height
@@ -13,29 +13,30 @@
   z-index: $features-index;
   width: 100%;
   display: grid;
-  grid-template-columns: 2fr 3fr;
-  grid-template-rows: $features__cut-out auto;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: auto 1fr;
   background-color: $white;
   padding: $features__cut-out 0;
   margin: -$features__cut-out 0;
 
+  @media screen and (max-width: 673px) {
+    background: linear-gradient(45deg, $white, $white_09),
+      url("../assets/images/single.png") center/ cover no-repeat;
+  }
+
   &__image {
-    background: url("../assets/images/single.png") center/contain no-repeat;
+    background: url("../assets/images/single.png") center/ contain no-repeat;
     grid-area: 2/1/3/2;
-    margin-left: 1rem;
+    margin: 1rem;
   }
 
   &__heading {
-    left: 1rem;
-    position: absolute;
     font-size: 1.7rem;
-    top: $features__cut-out;
-    margin-bottom: 1.1rem;
     font-family: "Mechanismo";
     text-transform: uppercase;
-    text-shadow: 0.2rem 0.2rem $gray_07;
-    margin-right: 1rem;
-    text-align: left;
+    text-shadow: 0.15rem 0.15rem $gray_05;
+    grid-area: 1/1/2/-1;
+    margin: 0.5rem;
 
     & > span {
       color: $gray_555;
@@ -45,8 +46,17 @@
   &__prag {
     color: $black;
   }
+}
 
-  @media screen and (max-width: 825px) {
-    grid-template-columns: 1fr 1fr;
+@media screen and (max-width: $features-breakpoint) {
+  .features {
+    background: linear-gradient(45deg, $white, $white_09),
+      url("../assets/images/single.png") center/ cover no-repeat;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto 1fr;
+
+    &__image {
+      display: none;
+    }
   }
 }
