--- a/landing-page/styles/src/components/_header.scss
+++ b/landing-page/styles/src/components/_header.scss
@@ -1,7 +1,7 @@
 @import "../variables/constants";
 
 .header {
-  height: 125vh;
+  height: 110vh;
   background: linear-gradient(45deg, $black_07, $black_85),
     url("../assets/images/nokia910_683.jpg") center/cover no-repeat;
   display: flex;
